--- a/src/social-profile/components/user.module.css
+++ b/src/social-profile/components/user.module.css
@@ -3,8 +3,7 @@
   font-size: 18px;
   line-height: 1.6;
   background: rgb(228, 228, 228);
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 40px;
   border: black 1px solid;
 }
 
